@@ -1,12 +1,14 @@
 # Bank System
-The end goal of this banking system is to have an app with a GUI where the user can log in, create accounts, and transfer money.
+This program runs locally and stores everything in serialized java objects. Data persists between runs.
+You can create new accounts, login to existing accounts, deposit and withdraw funds to your account, transfer funds to other accounts, and view a list of transactions.
 
-You MUST have the JavaFX SDK installed for this to compile and run.
+## To run:
+git clone https://github.com/dh60/bank
+cd bank
 
-To compile:
-javac --module-path $PATH_TO_FX --add-modules javafx.controls *.java
-
-To run the app:
-java --module-path $PATH_TO_FX --add-modules javafx.controls Dashboard
-
-This is a complete program that can deposit, withdraw, transfer your money and show all the previous transactions with just a click of the button
+### Mac (Apple Silicon only)
+sh mac.sh
+### Linux:
+sh linux.sh
+### Windows:
+win.bat
